k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-static-platform
  namespace: cloud-static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-static-platform

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%

  template:
    metadata:
      labels:
        app: cloud-static-platform
    spec:
      containers:
        - name: app
          image: ghcr.io/albertonah/cloud-static-platform:latest
          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /readyz
              port: 5000
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 20
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: cloud-static-platform-svc
  namespace: cloud-static
spec:
  selector:
    app: cloud-static-platform
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
